<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suspension_controller</name>
  <version>0.0.0</version>
  <description>Custom suspension controller plugin for ROS 2</description>
  <maintainer email="nickfc1@hotmail.com">nichlas-kondrup</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Specific dependency declarations only -->
  <build_depend>controller_interface</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>pluginlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/suspension_controller_plugins.xml"/>
  </export>
</package>

